fixed CV button, fixed text, fixed error 404, fixed spacing

--- a/src/app/selection/about/about.component.css
+++ b/src/app/selection/about/about.component.css
@@ -12,6 +12,7 @@ html, body {
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 40px;
+  padding-right: 100px;
   background-color: rgba(245, 245, 245, 0.44);
 }
 
@@ -56,7 +57,7 @@ html, body {
 }
 
 .profile-image {
-  width: 1200px;
+  width: 1000px;
 }
 
 .logos{
